# retro-arc.h

./: .clang-format  .gitconfig  .gitignore  AGENTS.md  CMakeLists.txt  CommonDOCS.md  GUIA_GIT_WORKFLOW.md  LIBRARIES.md  README.md  graficos.cpp  main.cpp  subir.bat  test_pokemon_interfaces.cpp  test_titleview_compilation.cpp
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: build.yml
Common/: Aligned.h  Auth.h  Chars.md  CharsDetail.md  Color.h  Consts.h  Font.h  Graphics.h  Input.h  Music.h  Navigation.h  Output.h  Sprite.h  Terminal.h  Test.h  Theme.h  UnicodeGlyphs.h  Utils.h  Variables.h  VirtualScreen.h
Common/Components/: BottomBar.h  InputComponent.h  LifeBar.h  Select.h  SelectComponent.h  SelectPrimaryBox.h  TransitionComponent.h
Common/Linux/: Keys.h  Music.h  Terminal.h
Common/Windows/: Keys.h  Music.h  Terminal.h
Juegos/BatallaNaval/: b_n_4.cpp
Juegos/Buscaminas/: Buscaminas.cpp  Buscaminas.h  BuscaminasDatabase.h  BuscaminasFunctions.cpp  BuscaminasFunctions.h  BuscaminasService.h  BuscaminasUI.h
Juegos/Buscaminas/Views/: ConfigView.h  ExitConfirmView.h  GameBoardView.h  GameOverView.h  InstructionsView.h  LevelSelectView.h  MainMenuView.h
Juegos/Invasion Espacial/: colisiones.h  consola .h  consola2.h  disparos.h  figuras.h  figuritas.h  juego version 1.cpp  juego.h  main.cpp  movimientos.h  pantallas.h  version 2 - introduccion I.E.cpp
Juegos/Pokemon/: DIAGNOSTICO.md  PokeballLaunchLeft.h  PokeballLaunchRight.h  PokeballLaunch_Left.h  PokeballLaunch_Right.h  Pokemon.cpp  Pokemon.h  PokemonFigures.h  PokemonUI.h
Juegos/Pokemon/Actions/: Action.h  AttackAction.h  BagAction.h  RunAction.h  SwitchPokemonAction.h
Juegos/Pokemon/Bridge/: PokemonBridge.h
Juegos/Pokemon/Commands/: AttackCommand.h  BagCommand.h  Command.h  RunCommand.h  SwitchPokemonCommand.h
Juegos/Pokemon/Components/: MenuOptions.h  TitleComponent.h
Juegos/Pokemon/Controllers/: Battle.h  Game.h  Player.h  PlayerController.h  Round.h  TurnController.h
Juegos/Pokemon/Database/: Effectiveness.h  MockData.h  Names.h  Options.h  PokemonDatabase.h  SpriteLookup.h  State.h
Juegos/Pokemon/Database/Classes/: MoveData.h  PokemonSpecie.h
Juegos/Pokemon/Enums/: ChooseCommandOption.h  GameOption.h  MenuOption.h  PokemonType.h
Juegos/Pokemon/Factories/: PokemonFactory.h
Juegos/Pokemon/Functions/: BuildTeam.h
Juegos/Pokemon/Game/: Battle.h  Game.h  Match.h  Round.h
Juegos/Pokemon/Models/: Antidote.h  Bag.h  Effect.h  FocusBand.h  Item.h  Leftover.h  Move.h  PhysicalMove.h  Player.h  Pokemon.h  PokemonType.h  Potion.h  SpecialMove.h  StatusMove.h  SuperPotion.h
Juegos/Pokemon/Models/Enums/: EffectName.h
Juegos/Pokemon/PokemonAnimatedSprites/: BulbasaurBack.h  BulbasaurFront.h  CharmanderBack.h  CharmanderFront.h  ChikoritaBack.h  ChikoritaFront.h  EeveeBack.h  EeveeFront.h  PikachuBack.h  PikachuFront.h  PsyduckBack.h  PsyduckFront.h  RockruffBack.h  RockruffFront.h  SquirtleBack.h  SquirtleFront.h
Juegos/Pokemon/PokemonMiniSprites/: BulbasaurMini.h  CharmanderMini.h  ChikoritaMini.h  EeveeMini.h  PikachuMini.h  PsyduckMini.h  RockruffMini.h  SquirtleMini.h
Juegos/Pokemon/PokemonSprites/: EeveeBack.h  RockruffBack.h
Juegos/Pokemon/PokemonStaticSprites/: BulbasaurBack.h  BulbasaurFront.h  CharmanderBack.h  CharmanderFront.h  ChikoritaBack.h  ChikoritaFront.h  EeveeFront.h  MochilaFront.h  PikachuBack.h  PikachuFront.h  PsyduckBack.h  PsyduckFront.h  RockruffFront.h  SquirtleBack.h  SquirtleFront.h  Trainer1Front.h  Trainer2Front.h
Juegos/Pokemon/Sound/: PokemonSound.h
Juegos/Pokemon/Sprites/: Mochila.h  PokeBall.h  Trainer1.h  Trainer2.h
Juegos/Pokemon/Views/: BattleViews.h  HuidaView.h  InstructionsView.h  MenuView.h  MochilaView.h  NombresView.h  PlayersView.h  PokemonSelectionView.h  TitleView.h  VictoryView.h
Juegos/Tictactoe/: ComoSeJuega.txt  Makefile.lnx  Makefile.win  TicTacToeFutbol  TicTacToeFutbol.dev  TicTacToeFutbol.layout  Tictactoe.h  TictactoeUI.h  console.cpp  console.h  game.cpp  game.h  main.cpp
Juegos/Tictactoe/Views/: ExitConfirmView.h  GameBoardView.h  GameOverView.h  InstructionsView.h  MainMenuView.h  QuizPanelView.h  TictactoeUI.h
Juegos/Tictactoe/figuras/: niñopensando.cpp
Juegos/Tictactoe/tablero/: game.h  tictactoe1.cpp
MainMenu/: MainMenu.h  PresentationView.h  TransitionView.h
MainMenu/BaseDatos/: Env.h  Options.h
MainMenu/Commands/: Auth.h  Select.h
MainMenu/Components/: ArcadeLeft.h  ArcadeRight.h  InputComponent.h  TitleComponent.h
MainMenu/Consts/: Labels.h
MainMenu/Database/: Env.h  Labels.h  Options.h  State.h
MainMenu/Sprites/: Clyde.h
MainMenu/Views/: CreditsView.h  MainMenuView.h  PasswordView.h  PresentationView.h  WrongPasswordView.h
SomeFeatures/BasicFunctions/: basicFunctions  basicFunctions.cpp
Tests/: BuscaminasTest  BuscaminasTest.cpp  ColorTest.cpp  ComponentTest.cpp  FontTest  FontTest.cpp  GraphicsTest  GraphicsTest.cpp  InputTest  InputTest.cpp  MainMenuTest  MainMenuTest.cpp  MenuViewTest.h  MinesweeperTest.h  MusicTest  MusicTest.cpp  PokemonLogicTest  PokemonLogicTest.cpp  PokemonTest  PokemonTest.cpp  PokemonViewTest.cpp  Rayquaza.h  RayquazaShiny.h  TestingGradients  TestingGradients.cpp  TictactoeTest  TictactoeTest.cpp  arceus.h  quick_test.cpp  rayquaza.h  test_pokemon_interfaces.cpp  test_simple.cpp
Tests/TestingGraphics/: testingBoxes  testingBoxes.cpp
docs/: BatallaNaval.md  Buscaminas.md  InvasionEspacial.md  MainMenu.md  Pokemon.md  SPEC-indexing-system.md  Tests.md  Tictactoe.md
juegos/Invasion Espacial/: colisiones.h  figuras.h  juego.h  pantallas.h
python/: 1-buscaminas.py  2-juego-palillos.py  4-piedra-papel-tijera.py  5-muertos-y-heridos.py  6-tic-tac-toe.py  7-ahorcado.py
